--- a/JS-Playground/Task-2/index.html
+++ b/JS-Playground/Task-2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> To calculate the interest </title>
+    <script src="index.js" defer ></script>
 </head>
 <body>
     <h1>To calculate the interest earned on a savings account balance</h1>
