--- a/Counter-App/index.html
+++ b/Counter-App/index.html
@@ -8,6 +8,13 @@
     <script defer src="index.js"></script>
 </head>
 <body>
-    
+    <h1 class="app-name">Counter App</h1>
+    <div class="counter-value" aria-label="Counter">
+        <span class="value" id="counter-value">0</span>
+    </div>
+    <div class="counter-controls">
+    <button class="btn" id="increment">-</button>
+    <button class="btn" id="decrement">+</button>
+    </div>
 </body>
 </html>
