counter app done

--- a/Counter-App/index.html
+++ b/Counter-App/index.html
@@ -13,8 +13,8 @@
         <span class="value" id="counter-value">0</span>
     </div>
     <div class="counter-controls">
-    <button class="btn" id="increment">-</button>
-    <button class="btn" id="decrement">+</button>
+    <button class="btn" id="decrement">-</button>
+    <button class="btn" id="increment">+</button>
     </div>
 </body>
 </html>
