--- a/Rock-Paper-Scissors/index.html
+++ b/Rock-Paper-Scissors/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rock-Paper-Scissors</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div class="icons-container">
-      <span class="rock-btn">Rock🪨</span>
-      <span class="paper-btn">Paper📃</span>
-      <span class="scissors-btn">Scissors✂️</span>
+      <span class="rock-btn" id="rock">Rock🪨</span>
+      <span class="paper-btn" id="paper">Paper📃</span>
+      <span class="scissors-btn" id="scissors">Scissors✂️</span>
     </div>
     <div class="hands">
-      <div class="user-hand">
+      <div class="user-hand ">
         <p>Your score (<span class="user-score">0</span>)</p>
-        <span class="hand-icon">🤜</span>
+        <span class="user hand-icon">🤜</span>
       </div>
-      <div class="computer-hand">
+      <div class="computer-hand ">
         <p>Computer's score (<span class="computer-score">0</span>)</p>
-        <span class="hand-icon">🤛</span>
+        <span class="computer hand-icon">🤛</span>
       </div>
 
     </div>
-    <div class="result"></div>
+    <div class="result" id="show-result"></div>
   </body>
 </html>
