--- a/Bill-splitter/index.html
+++ b/Bill-splitter/index.html
@@ -16,7 +16,7 @@
           <input id="bill-amount" type="number" />
         </div>
         <p>Select Tip</p>
-        <div class="tip-container">
+        <div class="tip-container disabled">
           <button class="tip">5%</button>
           <button class="tip">10%</button>
           <button class="tip">15%</button>
@@ -28,14 +28,14 @@
           class="custom-tip gray-input"
           type="number"
           placeholder="Custom Tip in Percentage"
-          
+          disabled
         />
         <p>Number of People</p>
         <input
           class="number-of-people gray-input"
           type="number"
           placeholder="Number of people"
-          
+          disabled
         />
         <button class="generate-bill-btn">Generate Bill</button>
       </div>
