output bill section done

--- a/Bill-splitter/index.html
+++ b/Bill-splitter/index.html
@@ -37,7 +37,7 @@
           placeholder="Number of people"
           disabled
         />
-        <button class="generate-bill-btn">Generate Bill</button>
+        <button class="generate-bill-btn" disabled>Generate Bill</button>
       </div>
       <div class="bill-output">
         <p class="tip-amount">Tip amount <span></span></p>
