5th project setup done

--- a/04-Toast-popup/index.html
+++ b/04-Toast-popup/index.html
@@ -37,6 +37,11 @@
       </div>
       <button class="show-toast">Show Toast</button>
     </div>
-    <div class="toasts-container"></div>
+    <div class="toasts-container">
+      <div class="toast">This is the message</div>
+      <div class="toast">This is the message</div>
+      <div class="toast">This is the message</div>
+      <div class="toast">This is the message</div>
+    </div>
   </body>
 </html>
