--- a/05-Guess-the-number/index.html
+++ b/05-Guess-the-number/index.html
@@ -25,8 +25,8 @@
             <small class="form-hint">Enter a number between 0 and 100</small>
         </div>
         <div class="button-group">
-            <button type="submit" id="submit" class="btn btn-primary" disabled="">Submit Guess</button>
-            <button type="button" id="startGame" class="btn btn-secondary">
+            <button type="submit" id="submit" class="btn btn-primary">Submit Guess</button>
+            <button type="button" id="startGame" class="btn btn-secondary" disabled>
               New Game
             </button>
           </div>
