learned about positon css property

--- a/CSS-Playground/Position/index.html
+++ b/CSS-Playground/Position/index.html
@@ -7,8 +7,59 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="box">
-        hello
+    <div class="header">
+        <p>
+          I am header
+        </p>
     </div>
+    <div class="nav">
+        <p>
+            I am navbar
+        </p>
+    </div>
+    <div class="box box1">
+        <h3>Static Position</h3>
+    </div>
+    <div class="box box2">
+        <h3>Relative Position</h3>
+    </div>
+    <div class="box box3">
+        <h3>Absolute Position</h3>
+    </div>
+    <div class="box box4">
+        <h3>Fixed Position</h3>
+    </div>
+    <div class="box box5">
+        <h3>Sticky Position</h3>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptas, saepe nostrum consequuntur recusandae distinctio possimus ullam aliquid excepturi, sequi consequatur illum labore ut ab quas aut. Voluptatum, sit quisquam!</p>
 </body>
 </html>
