--- a/CSS-Playground/Projects/QR-Code-Card/index.html
+++ b/CSS-Playground/Projects/QR-Code-Card/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="card">
+        <img src="/CSS-Playground/Projects/QR-Code-Card/design-file/images/image-qr-code.png">
+        <h2>Improve your front-end skills by building projects</h2>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
 </body>
 </html>
