work in progress

--- a/CSS-Playground/Projects/youtube-hashtag-header/index.html
+++ b/CSS-Playground/Projects/youtube-hashtag-header/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    
+    <div class="hashtag-header">
+        <h1>#css</h1>
+        <span>208K videos • 28K channels</span>
+    </div>
 </body>
 </html>
