--- a/CSS-Playground/Projects/youtube-hashtag-header/index.html
+++ b/CSS-Playground/Projects/youtube-hashtag-header/index.html
@@ -11,6 +11,11 @@
     <div class="hashtag-header">
         <h1>#css</h1>
         <span>208K videos • 28K channels</span>
+        <img src="./images/people/person-4.jpg" >
+        <img src="./images/people/person-5.jpg" >
+        <img src="./images/people/person-6.jpg" >
+        <img src="./images/people/person-4.jpg" >
+        <img src="./images/people/person-5.jpg" >
     </div>
 </body>
 </html>
